Ensure project description does not squish against right column.

--- a/app/assets/stylesheets/_projects-show.scss
+++ b/app/assets/stylesheets/_projects-show.scss
@@ -175,7 +175,7 @@ header.project {
   }
 
   .project-description {
-    max-width: grid-width(8);
+    max-width: 580px;
 
     h2 {
       font: normal 18px/22px $sans-serif;
